--- a/journal/201806.md
+++ b/journal/201806.md
@@ -208,30 +208,11 @@ In the middle of the month Decred was [noticed](https://twitter.com/cburniske/st
 
 ## Relevant External
 
-https://www.coindesk.com/downside-democracy-means-blockchain-governance/
+Obelisk [announced](https://twitter.com/ObeliskTechHQ/status/1004441883458842629) Launchpad service. The [idea](https://medium.com/obelisk-blog/introducing-obelisk-launchpad-b78756eaa74c) is to work with coin developers to design a custom, ASIC-friendly PoW algorithm together with a first batch of ASICs and distribute them among the community.
 
-https://blog.zencash.com/zencash-statement-on-double-spend-attack/
+Equihash-based ZenCash [was hit](https://blog.zencash.com/zencash-statement-on-double-spend-attack/) by a double spend attack that led to a loss of $450,000 worth of coins.
 
-Microsoft acquired GitHub. There was some debate whether it is a reason to look to alternative solutions like GitLab right now. In any case it is always a good idea to have your copy of Decred [source code](https://github.com/decred), just in case.
-
-Obelisk announced Launchpad
-
-* https://twitter.com/ObeliskTechHQ/status/1004441883458842629
-* https://medium.com/obelisk-blog/introducing-obelisk-launchpad-b78756eaa74c
-
-Another update from @sumiflow on correcting supply on various sites:
-
-> sumiflow: To begin with, none of the below sites were showing the correct supply or market cap for Decred but we've made some progress.  
-> coingecko.com - corrected!  
-> coinlib.io - corrected!  
-> cryptocompare.com - corrected!  
-> livecoinwatch.com - corrected!  
-> worldcoinindex.com - corrected!  
-> cryptoindex.co - awaiting fix  
-> onchainfx.com - awaiting fix  
-> coinmarketcap.com - refused to fix because devs have coins too? ([slack](https://decred.slack.com/archives/C3PBR19L4/p1528500418000009))
-
-Almost one year after collecting funds, Tezos [announced](http://tezosfoundation.ch/news/tezos-foundation-announces-kyc-aml/) a surprise identification procedure to claim tokens ([non-js version](https://archive.today/NeaAT)).
+Almost one year after collecting funds, Tezos [announced](http://tezosfoundation.ch/news/tezos-foundation-announces-kyc-aml/) a surprise identification procedure to claim tokens ([non-javascript version](https://archive.today/NeaAT)).
 
 A hacker [broke into](https://www.bleepingcomputer.com/news/security/hacker-breaches-syscoin-github-account-and-poisons-official-client/) Syscoin GitHub account and implanted malware stealing passwords and private keys into Windows binaries. This is a painful reminder for everybody to [verify binaries](https://docs.decred.org/advanced/verifying-binaries/) after download.
 
@@ -242,5 +223,14 @@ Circle [announced](https://medium.com/circle-blog/introducing-the-circle-asset-f
 Bithumb got [hacked](https://cointelegraph.com/news/world-s-sixth-largest-crypto-exchange-by-trade-volume-bithumb-hacked) with a $30 m loss.
 
 Zcash organized Zcon0, an event in Canada that focused on privacy tech and governance. An interesting [insight](https://www.youtube.com/watch?v=ioV7mBt7SMA&t=830) from Keynote Panel on governance: "There is no such thing as on-chain governance".
+
+Microsoft acquired GitHub. There was some debate whether it is a reason to look to alternative solutions like GitLab right now. It is always a good idea to have your copy of Decred [source code](https://github.com/decred), just in case.
+
+Another update from @sumiflow on correcting supply on various sites:
+
+> To begin with, none of the below sites were showing the correct supply or market cap for Decred but we've made some progress.  
+> coingecko.com - corrected!, coinlib.io - corrected!, cryptocompare.com - corrected!, livecoinwatch.com - corrected!, worldcoinindex.com - corrected!  
+> cryptoindex.co - awaiting fix, onchainfx.com - awaiting fix  
+> coinmarketcap.com - refused to fix because devs have coins too? ([slack](https://decred.slack.com/archives/C3PBR19L4/p1528500418000009))
 
 ## About This Issue
