--- a/journal/201806.md
+++ b/journal/201806.md
@@ -12,7 +12,7 @@ Decrediton: work towards watching only wallets, lots of bugfixes and visual desi
 
 Trezor: Decred appeared in [firmware update](https://blog.trezor.io/june-updates-trezor-one-firmware-wallet-zcash-cashaddr-doge-e21cbdf9807d) and on [Trezor website](https://trezor.io/coins/#DCR), currently for testnet only. Next steps are mainnet support and integration in wallets. For Decrediton support you can track [this meta issue](https://github.com/decred/decrediton/issues/1491).
 
-Politeia is live on testnet! Useful links: [announcement](https://twitter.com/marco_peereboom/status/1009552512968482818), [introduction](https://www.reddit.com/r/decred/comments/8sn1b8/test_the_politeia_proposal_system_on_testnet/), CLI session [example](https://gist.github.com/marcopeereboom/ee494a6864086e0b5a4ac8886a9c0397), [example proposal](https://test-proposals.decred.org/proposals/c5241806166d89286be56cd2605e7d76537eb32a40a8f8d8bde3bff4c2fc6585/) with some votes, [mini-guide](https://github.com/decred/politeia/blob/master/politeia.md) how to compose a proposal.
+Politeia is live on testnet! Useful links: [announcement](https://twitter.com/marco_peereboom/status/1009552512968482818), [introduction](https://www.reddit.com/r/decred/comments/8sn1b8/test_the_politeia_proposal_system_on_testnet/), command line voting [example](https://gist.github.com/marcopeereboom/ee494a6864086e0b5a4ac8886a9c0397), [example proposal](https://test-proposals.decred.org/proposals/c5241806166d89286be56cd2605e7d76537eb32a40a8f8d8bde3bff4c2fc6585/) with some votes, [mini-guide](https://github.com/decred/politeia/blob/master/politeia.md) how to compose a proposal.
 
 dcrdata: Continued work on Insight API support, see this [master issue](https://github.com/decred/dcrdata/issues/400) for progress overview. It is important for integrations since Insight API is very popular. Ongoing work to add charts. A big database change to improve sorting on the Address page was [merged](https://github.com/decred/dcrdata/commit/006685be846ac9cfe7b9b76eebabdb7bffdaad18) and bumped version to 3.0. Work to visualize agenda voting [continues](https://github.com/decred/dcrdata/pull/523).
 
@@ -240,3 +240,13 @@ Another update from @sumiflow on correcting supply on various sites:
 > coinmarketcap.com - refused to fix because devs have coins too? ([slack](https://decred.slack.com/archives/C3PBR19L4/p1528500418000009))
 
 ## About This Issue
+
+This is the third issue of Decred Journal. Previous [April](https://xaur.github.io/decred-news/journal/201804) and [May](https://xaur.github.io/decred-news/journal/201805) are available via GitHub Pages.
+
+The new public [Matrix logs](https://gist.github.com/jrick/458eab91a650f24be4237a7db7662dd3) look promising and we hope to transition to Matrix links instead of Slack links. In the meantime, the way to read Slack links is explained in the [previous issue](https://xaur.github.io/decred-news/journal/201805).
+
+Most information from third parties is relayed directly from source after a minimal sanity check. The authors of Decred Journal have no ability to verify all claims. Please beware of scams and do your own research.
+
+As usual, any feedback is appreciated: please comment on [Reddit](), [GitHub](https://github.com/xaur/decred-news/issues) or [#writers_room](https://decred.slack.com/messages/C9HC2NVTM/). Contributions are welcome too, anything from initial collection to final review to translations.
+
+Special thanks to @Haon for bringing May 2018 issue to [medium](https://medium.com/decred/decred-journal-may-2018-6ea021e4f26a).
