--- a/journal/201806.md
+++ b/journal/201806.md
@@ -4,7 +4,7 @@
 
 ## Development
 
-The biggest announcement of the month was the new kind of decentralized exchange [proposed](https://blog.decred.org/2018/06/05/A-New-Kind-of-DEX/) by Company 0. Check Community Discussions section for more on this.
+The biggest announcement of the month was the new kind of decentralized exchange [proposed](https://blog.decred.org/2018/06/05/A-New-Kind-of-DEX/) by "jy-p of Company 0. The Community Discussions section considers the stakeholders' response.
 
 dcrd: Peer management and connectivity improvements. Some work for [improved sighash algo](https://github.com/decred/dcrd/issues/950). A new [optimization](https://github.com/decred/dcrd/pull/1273) that gives 3-4x faster serving of headers, which is great for SPV. This was another step towards multipeer parallel downloads — check [this issue](https://github.com/decred/dcrd/issues/1145) for a clear overview of progress and planned work for next months (and some engineering delight). As usual, codebase cleanup, improvements to error handling, test infrastructure and test coverage.
 
@@ -105,7 +105,7 @@ Past:
 Upcoming:
 
 * [Meetup](https://www.eventbrite.co.uk/e/decred-x-blueyard-berlin-meetup-currencies-core-chains-the-future-of-blockchain-governance-and-tickets-47586593783) in Berlin, Germany on July 18. [@jz](https://twitter.com/jz_bz) will give a talk and Q&A about Decred and chat with Ele from [@oscoin](https://twitter.com/oscoin) about incentivizing developers. [Hosted](https://twitter.com/pbanhardt/status/1014167988663209985) by BlueYard Capital.
-* [O'Reilly Open Source Convention](https://conferences.oreilly.com/oscon/oscon-or) in Portland, USA on July 18-19. People willing to attend this developer focused event can use Decred25 discount code in the [registration link](https://conferences.oreilly.com/oscon/oscon-or/public/register) to save 25%. For any questions join [#event_planning](https://decred.slack.com/messages/C66363X44/) and contact [@Jesiki](https://decred.slack.com/team/UAG6W3GFP) so she can invite you to any gatherings in the area.
+* [O'Reilly Open Source Convention](https://conferences.oreilly.com/oscon/oscon-or) in Portland, USA on July 18-19. People wishing to attend this developer focused event can use Decred25 discount code when [registering](https://conferences.oreilly.com/oscon/oscon-or/public/register) to save 25%. For any questions join [#event_planning](https://decred.slack.com/messages/C66363X44/) and contact [@Jesiki](https://decred.slack.com/team/UAG6W3GFP), she can also invite you to any gatherings in the area.
 
 ## Media
 
@@ -115,7 +115,7 @@ Upcoming:
 
 [@morphymore](https://twitter.com/morphymore) translated Placeholder's [Decred Investment Thesis](https://medium.com/@morphymore/%E4%B8%80%E7%AF%87-decred-%E7%9A%84%E6%B7%B1%E5%BA%A6%E7%A0%94%E7%A9%B6%E8%AB%96%E6%96%87-%E7%BF%BB%E8%AD%AF-43bf1afc7127) and Richard Red's [write-up on Politeia](https://medium.com/@morphymore/decred-%E9%80%8F%E9%81%8E-politeia-%E7%9A%84%E9%A0%85%E7%9B%AE%E5%9F%BA%E9%87%91%E6%B2%BB%E7%90%86-%E7%BF%BB%E8%AD%AF-8b65d58d22e4) to Chinese, while @DZ translated Decred Roadmap 2018 to [Italian](https://medium.com/decred-ita/roadmap-di-decred-per-il-2018-f8af547c8147) and [Russian](https://medium.com/decred-russia/%D0%BF%D0%BB%D0%B0%D0%BD-%D0%B4%D0%B5%D0%B9%D1%81%D1%82%D0%B2%D0%B8%D0%B9-decred-%D0%BD%D0%B0-2018-%D0%B3%D0%BE%D0%B4-78096822b8ea), and A New Kind of DEX to [Russian](https://medium.com/decred-russia/%D0%BD%D0%BE%D0%B2%D1%8B%D0%B9-%D0%B2%D0%B8%D0%B4-%D0%B4%D0%B5%D1%86%D0%B5%D0%BD%D1%82%D1%80%D0%B0%D0%BB%D0%B8%D0%B7%D0%BE%D0%B2%D0%B0%D0%BD%D0%BD%D0%BE%D0%B3%D0%BE-%D0%BE%D0%B1%D0%BC%D0%B5%D0%BD%D0%B0-dex-27a05449de8f).
 
-Second issue of Chinese ratings [released](http://special.ccidnet.com/pub-bc-eval/). Compared to [first issue](https://archive.today/4Xhz6), Decred dropped from 26 to 29 while Bitcoin fell from 13 to 17. We (authors) try hard to refrain from commenting this one.
+Second iteration of Chinese ratings [released](http://special.ccidnet.com/pub-bc-eval/). Compared to the [first issue](https://archive.today/4Xhz6), Decred dropped from 26 to 29 while Bitcoin fell from 13 to 17. We (the authors) restrain ourselves commenting on this one.
 
 Videos:
 
@@ -123,12 +123,12 @@ Videos:
 * Decred Assembly - Ep20 - Governance: Driving the Future ([youtube](https://www.youtube.com/watch?v=-rViMNjL2TA))
 
   [@cburniske](https://twitter.com/cburniske) and [@traceagain](https://twitter.com/traceagain) discuss the importance of governance protocols being foundational and problems with delegated proof of stake
-* [@phenrikand](https://twitter.com/phenrikand) from [@ApolloCapitalAU](https://twitter.com/ApolloCapitalAU) chat with [@joshuam_](https://twitter.com/joshuam_) at @YBFVentures ([youtube](https://www.youtube.com/watch?v=TbutOmE4yMg), [tweet](https://twitter.com/phenrikand/status/1008599031340077057))
+* [@phenrikand](https://twitter.com/phenrikand) from [@ApolloCapitalAU](https://twitter.com/ApolloCapitalAU) chats with [@joshuam_](https://twitter.com/joshuam_) at @YBFVentures ([youtube](https://www.youtube.com/watch?v=TbutOmE4yMg), [tweet](https://twitter.com/phenrikand/status/1008599031340077057))
 
   > This is an in depth exploration of one of the most interesting projects in the space. ([@ApolloCapitalAU](https://twitter.com/ApolloCapitalAU/status/1008618074050875392))
 * Decred Review (Russian, [youtube](https://www.youtube.com/watch?v=Zj5iKLl75gc))
 
-Audios:
+Audio:
 
 * Unchained Podcast with Fat Protocols author [@jmonegro](https://twitter.com/jmonegro) of [@placeholdervc](https://twitter.com/placeholdervc), hosted by [@laurashin](https://twitter.com/laurashin) (audio and links at [unchainedpodcast.co](http://unchainedpodcast.co/placeholders-joel-monegro-on-the-fat-protocols-thesis-today-ep65), audio on [itunes](https://itunes.apple.com/us/podcast/placeholders-joel-monegro-on-fat-protocols-thesis-today/id1123922160?i=1000413536533&mt=2), twitter threads: [@laurashin](https://twitter.com/laurashin/status/1006557785180389377) [@ljxie](https://twitter.com/ljxie/status/1006421319326396416))
 
@@ -136,7 +136,7 @@ Audios:
 
 Featured articles:
 
-* What is on-chain cryptocurrency governance? Is it plutocratic? by Richard Red ([medium](https://medium.com/@richardred/what-is-on-chain-cryptocurrency-governance-is-it-plutocratic-bfb407ef6f1))
+* What is on-chain cryptocurrency governance? Is it plutocratic? by [Richard Red](https://twitter.com/richardred0x) ([medium](https://medium.com/@richardred/what-is-on-chain-cryptocurrency-governance-is-it-plutocratic-bfb407ef6f1))
 * Apples to apples, Decred is 20x more expensive to attack than Bitcoin by Zubair Zia ([medium](https://medium.com/@zubairzia/apples-to-apples-decred-is-20x-more-expensive-to-attack-than-bitcoin-68bafeb4546f))
 * Decred cryptocurrency guide ([wikicryptocoins.com](https://www.wikicryptocoins.com/currency/Decred))
 * Introduction to Decred by Smith + Crown ([smithandcrown.com](https://www.smithandcrown.com/introduction-to-decred/))
@@ -173,16 +173,16 @@ Articles:
 
 ## Community Discussions
 
-Community stats: Twitter 40,209 (+1,091), Reddit 8,410 (+243), Slack 5,830 (+172), GitHub 392 stars and 918 forks of dcrd repository.
+Community stats: Twitter followers 40,209 (+1,091), Reddit subscribers 8,410 (+243), Slack users 5,830 (+172), GitHub 392 stars and 918 forks of dcrd repository.
 
 An update on our communication systems:
 
 * Matrix chat logs [are now](https://twitter.com/joshrickmar/status/1007738206731816960) [viewable](https://gist.github.com/jrick/458eab91a650f24be4237a7db7662dd3) on the web with the exception of some channels that are not bridged. The new web logs means our chats are now fully public and indexed by search engines.
-* Slack had an [outage](https://status.slack.com/2018-06/142edcb9e52c7663) on Jun 27 that disturbed some communications for couple hours.
+* Slack had an [outage](https://status.slack.com/2018-06/142edcb9e52c7663) on Jun 27 that disturbed communications for a few hours, discussions continued on Decred's bridged platforms.
 
 Jake Yocom-Piatt did an [AMA on r/CryptoTechnology](https://www.reddit.com/r/CryptoTechnology/comments/8nujuo/hello_this_is_jake_yocompiatt_ask_me_anything/), a forum for serious crypto tech discussion. Some topics covered were Decred attack cost and resistance, voting policies, smart contracts, SPV security, DAO and DPoS.
 
-[A new kind of DEX](https://blog.decred.org/2018/06/05/A-New-Kind-of-DEX/) received an extensive discussion on [#general](https://decred.slack.com/archives/C0NRMDVMJ/p1528209752000802), [#random](https://decred.slack.com/archives/C3PAYQJTW/p1528210469000917), [#trading](https://decred.slack.com/archives/C3PBR19L4/p1528209357000114) channels as well as [Reddit](https://www.reddit.com/r/decred/comments/8orxdf/a_new_kind_of_decentralized_exchange_dex/). New channel [#thedex](https://decred.slack.com/messages/CB1BDE40Z/) was created and attracted more than 100 people.
+[A new kind of DEX](https://blog.decred.org/2018/06/05/A-New-Kind-of-DEX/) was the subject of an extensive discussion in [#general](https://decred.slack.com/archives/C0NRMDVMJ/p1528209752000802), [#random](https://decred.slack.com/archives/C3PAYQJTW/p1528210469000917), [#trading](https://decred.slack.com/archives/C3PBR19L4/p1528209357000114) channels as well as [Reddit](https://www.reddit.com/r/decred/comments/8orxdf/a_new_kind_of_decentralized_exchange_dex/). New channel [#thedex](https://decred.slack.com/messages/CB1BDE40Z/) was created and attracted more than 100 people.
 
 A frequent and fair question is how the DEX would benefit Decred. @lukebp has put it well:
 
@@ -193,13 +193,13 @@ Another concern that it will slow down other projects was addressed by @davecgh:
 
 > The intent is for an external team to take up the mantle and build it, so it won't have any bearing on the current c0 roadmap.  The important thing to keep in mind is that the goal of Decred is to have a bunch of independent teams on working on different things. ([slack](https://decred.slack.com/archives/C3PBR19L4/p1528241447000199))
 
-A [chat](https://twitter.com/AnselLindner/status/1003708357193150466) about Decred fork resistance started on Twitter and continued on [#trading](https://decred.slack.com/archives/C3PBR19L4/p1528138824000839). Our community members continue to tirelessly educate about the workings of Decred hybrid system. Key takeaway from this chat is that Decred chain is impossible to advance without votes, and to get around that the forker needs to change it to the point when it's no longer Decred.
+A [chat](https://twitter.com/AnselLindner/status/1003708357193150466) about Decred fork resistance started on Twitter and continued in [#trading](https://decred.slack.com/archives/C3PBR19L4/p1528138824000839). Community members continue to discuss the finer points of Decred's hybrid system, bringing new users up to speed and answering their questions. The key takeaway from this chat is that thee Decred chain is impossible to advance without votes, and to get around that the forker needs to change the protocol in a way that would make it clearly not Decred.
 
 "Against community governance" [article](https://medium.com/@decanus/against-community-governance-326dc82b27d3) was discussed on [Reddit](https://www.reddit.com/r/decred/comments/8qhc3v/against_community_governance_by_dean_eigenmann/) and [#governance](https://decred.slack.com/archives/CAAMEU56W/p1528466175000149).
 
 "The Downside of Democracy (and What it Means for Blockchain Governance)" was another [article](https://www.coindesk.com/downside-democracy-means-blockchain-governance/) arguing against on-chain governance, discussed [here](https://www.reddit.com/r/decred/comments/8u4191/how_important_is_onchain_governance/).
 
-Reddit recap: mining rig shops [discussion](https://www.reddit.com/r/decred/comments/8oz77j/decred_miner_sellers_discussion/); [how centralized](https://www.reddit.com/r/decred/comments/8pm02p/will_politeia_be_a_centralised/) is Politeia; controversial [debate](https://www.reddit.com/r/decred/comments/8ppkoz/it_decreds_new_marketing_plan_to_hire_models_to/) on photos of models that started of frustration but yielded useful discussion on our marketing approach; [analysis](https://www.reddit.com/r/decred/comments/8qotqa/huge_drop_in_number_of_transactions/) of a drop in number of transactions; [concerns](https://www.reddit.com/r/decred/comments/8rsf7v/a_few_questions_id_like_to_propose_in_my_search/) regarding project [bus factor](https://en.wikipedia.org/wiki/Bus_factor), removing central authorities, advertising and full node count — received detailed responses; an [argument](https://www.reddit.com/r/decred/comments/8sn6zb/what_is_on_chain_cryptocurrency_governance_is_it/e10yl2k/) by insette for maximizing aggregate tx fees; [coordinating](https://www.reddit.com/r/decred/comments/8u8kg2/coordinating_the_ecosystem_for_consensus_upgrades/) network upgrades; a new "Why Decred?" [thread](https://www.reddit.com/r/decred/comments/8up7y1/if_i_think_bitcoin_will_succeed_long_term_why/); a [question](https://www.reddit.com/r/decred/comments/8uyr6d/is_quantum_computing_a_threat_to_the_dcr/) about quantum resistance with a detailed answer and a recap of current status of quantum resistant algorithms.
+Reddit recap: mining rig shops [discussion](https://www.reddit.com/r/decred/comments/8oz77j/decred_miner_sellers_discussion/); [how centralized](https://www.reddit.com/r/decred/comments/8pm02p/will_politeia_be_a_centralised/) is Politeia; controversial [debate](https://www.reddit.com/r/decred/comments/8ppkoz/it_decreds_new_marketing_plan_to_hire_models_to/) on photos of models that yielded useful discussion on our marketing approach; [analysis](https://www.reddit.com/r/decred/comments/8qotqa/huge_drop_in_number_of_transactions/) of a drop in number of transactions; [concerns](https://www.reddit.com/r/decred/comments/8rsf7v/a_few_questions_id_like_to_propose_in_my_search/) regarding project [bus factor](https://en.wikipedia.org/wiki/Bus_factor), removing central authorities, advertising and full node count — received detailed responses; an [argument](https://www.reddit.com/r/decred/comments/8sn6zb/what_is_on_chain_cryptocurrency_governance_is_it/e10yl2k/) by insette for maximizing aggregate tx fees; [coordinating](https://www.reddit.com/r/decred/comments/8u8kg2/coordinating_the_ecosystem_for_consensus_upgrades/) network upgrades; a new "Why Decred?" [thread](https://www.reddit.com/r/decred/comments/8up7y1/if_i_think_bitcoin_will_succeed_long_term_why/); a [question](https://www.reddit.com/r/decred/comments/8uyr6d/is_quantum_computing_a_threat_to_the_dcr/) about quantum resistance with a detailed answer and a recap of current status of quantum resistant algorithms.
 
 Chats recap: Programmatic Proof-of-Work (ProgPoW) [discussion](https://decred.slack.com/archives/C3P6R055Z/p1527845045000146); [possible hashrate](https://decred.slack.com/archives/C3P6R055Z/p1528734740000121) of Blake-256 miners is at least ~30% higher than SHA-256d; how Decred is [not vulnerable](https://decred.slack.com/archives/C0NRMDVMJ/p1529127002000075) to SPV leaf/node attack.
 
@@ -207,19 +207,19 @@ Chats recap: Programmatic Proof-of-Work (ProgPoW) [discussion](https://decred.sl
 
 DCR opened the month at ~$93, reached monthly high of $110, gradually dropped to the low of $58 and closed at $67. In BTC terms it was 0.0125 -> 0.0150 -> 0.0098 -> 0.0105. The downturn coincided with a global decline across the whole crypto market.
 
-In the middle of the month Decred was [noticed](https://twitter.com/cburniske/status/1007970492760969219) to be #1 in [onchainfx](https://onchainfx.com/) "% down from ATH" chart and on [this](https://twitter.com/coinztrader/status/1008379790250905601) chart by @CoinzTrader. Towards the end of the month it retreated to #3.
+In the middle of the month Decred was [noticed](https://twitter.com/cburniske/status/1007970492760969219) to be #1 in [onchainfx](https://onchainfx.com/) "% down from ATH" chart and on [this](https://twitter.com/coinztrader/status/1008379790250905601) chart by @CoinzTrader. Towards the end of the month it dropped to #3.
 
 ## Relevant External
 
 Obelisk [announced](https://twitter.com/ObeliskTechHQ/status/1004441883458842629) Launchpad service. The [idea](https://medium.com/obelisk-blog/introducing-obelisk-launchpad-b78756eaa74c) is to work with coin developers to design a custom, ASIC-friendly PoW algorithm together with a first batch of ASICs and distribute them among the community.
 
-Equihash-based ZenCash [was hit](https://blog.zencash.com/zencash-statement-on-double-spend-attack/) by a double spend attack that led to a loss of $450,000 worth of coins.
+Equihash-based ZenCash [was hit](https://blog.zencash.com/zencash-statement-on-double-spend-attack/) by a double spend attack that led to a loss of $450,000 by the exchange which was targeted.
 
 Almost one year after collecting funds, Tezos [announced](http://tezosfoundation.ch/news/tezos-foundation-announces-kyc-aml/) a surprise identification procedure to claim tokens ([non-javascript version](https://archive.today/NeaAT)).
 
-A hacker [broke into](https://www.bleepingcomputer.com/news/security/hacker-breaches-syscoin-github-account-and-poisons-official-client/) Syscoin GitHub account and implanted malware stealing passwords and private keys into Windows binaries. This is a painful reminder for everybody to [verify binaries](https://docs.decred.org/advanced/verifying-binaries/) after download.
+A hacker [broke into](https://www.bleepingcomputer.com/news/security/hacker-breaches-syscoin-github-account-and-poisons-official-client/) Syscoin's GitHub account and implanted malware stealing passwords and private keys into Windows binaries. This is a painful reminder for everybody to [verify binaries](https://docs.decred.org/advanced/verifying-binaries/) after download.
 
-Circle [announced](https://medium.com/circle-blog/introducing-the-circle-asset-framework-d89ee84b498a) new asset listing framework for Poloniex. Relevant to recent discussions of exchange listing extortion:
+Circle [announced](https://medium.com/circle-blog/introducing-the-circle-asset-framework-d89ee84b498a) new asset listing framework for Poloniex. Relevant to recent discussions of exchange listing bribery:
 
 > Please note: we will not accept any kind of payment to list an asset.
 
@@ -227,7 +227,7 @@ Bithumb got [hacked](https://cointelegraph.com/news/world-s-sixth-largest-crypto
 
 Zcash organized Zcon0, an event in Canada that focused on privacy tech and governance. An interesting [insight](https://www.youtube.com/watch?v=ioV7mBt7SMA&t=830) from Keynote Panel on governance: "There is no such thing as on-chain governance".
 
-Microsoft acquired GitHub. There was some debate whether it is a reason to look to alternative solutions like GitLab right now. It is always a good idea to have your copy of Decred [source code](https://github.com/decred), just in case.
+Microsoft acquired GitHub. There was some debate about whether it is a reason to look into alternative solutions like GitLab right now. It is always a good idea to have a local copy of Decred [source code](https://github.com/decred), just in case.
 
 Status update from @sumiflow on correcting DCR supply on various sites:
 
