Shorten DCR supply update

--- a/journal/201806.md
+++ b/journal/201806.md
@@ -232,8 +232,8 @@ Microsoft acquired GitHub. There was some debate about whether it is a reason to
 Status update from @sumiflow on correcting DCR supply on various sites:
 
 > To begin with, none of the below sites were showing the correct supply or market cap for Decred but we've made some progress.  
-> coingecko.com - corrected!, coinlib.io - corrected!, cryptocompare.com - corrected!, livecoinwatch.com - corrected!, worldcoinindex.com - corrected!  
-> cryptoindex.co - awaiting fix, onchainfx.com - awaiting fix  
+> coingecko.com, coinlib.io, cryptocompare.com, livecoinwatch.com, worldcoinindex.com - corrected!  
+> cryptoindex.co, onchainfx.com - awaiting fix  
 > coinmarketcap.com - refused to fix because devs have coins too? ([slack](https://decred.slack.com/archives/C3PBR19L4/p1528500418000009))
 
 ## About This Issue
