Events: Past -> Attended, add Blockchain Summit; add PoW newsletter

--- a/journal/201806.md
+++ b/journal/201806.md
@@ -94,13 +94,14 @@ Arbitrade is now [mining](https://arbitrade.io/newsletter/20180607_Domicile_Anno
 
 ## Events
 
-Past:
+Attended:
 
 * [Meetup](https://www.meetup.com/DecredBrasil/events/251458289/) in Belo Horizonte, Brazil.
 * [Meetup](https://www.meetup.com/DecredBrasil/events/251930022/) in Rio de Janeiro, Brazil. ([photo](https://twitter.com/JonathanVeg2/status/1012888639880167424))
 * [Campus Party](http://brasil.campus-party.org/cpbrasilia/) in Brasilia, Brazil. @girino, @Rhama and @matheusd talked about Decred. Matheus was interviewed by a TV channel. Check this quick [report](https://view.matrix.org/room/!aNPTuiryMFmdMQWUzb:decred.org/?anchor=$153053539830525TMYGv:decred.org&highlight) about the event, click "Show newer" to continue reading. (photos: [1](https://twitter.com/criptofacil/status/1012796023352320005) [2](https://twitter.com/matheusd_tech/status/1013052873800855553) [3](https://twitter.com/matheusd_tech/status/1012786231699279873))
 * [Blockchain Connect Conference](https://www.eventbrite.com/e/blockchain-connect-conference-silicon-valley-2018-tickets-44353362100) in Silicon Valley, USA. ([photo](https://twitter.com/jz_bz/status/1012078985595977734))
 * [Zcon0](https://archive.is/submit/) in Montreal, Canada. @jz [represented](https://twitter.com/jz_bz/status/1012118941877952512) Decred.
+* [Blockchain Summit](http://blockchainsummitlondon.com/) in London, UK. This was not a full blown presence with stand but rather investigation of opportunities by @kyle and @Ani. The resulting detailed [report](https://medium.com/@firethought/blockchain-summit-london-c39e3154f1aa) is a good example of a document advising to stakeholders whether it is worth spending project funds.
 
 Upcoming:
 
@@ -145,6 +146,7 @@ Featured articles:
 * Why You Should Keep an Eye on Decred by By Daniel Frumkin ([investinblockchain.com](https://www.investinblockchain.com/why-decred/))
 * Understanding Decred: Decentralized Governance and Decision Making on the Blockchain ([blockgeeks.com](https://blockgeeks.com/guides/decred/))
 * Decred short and to-the-point review by Timur Badretdinov ([longcaller.com](https://longcaller.com/coin/decred.html))
+* Continued presence in the [Proof of Work newsletter](https://proofofwork.substack.com/archive)
 
 Articles:
 
