Add DEX translation to IT

--- a/journal/201806.md
+++ b/journal/201806.md
@@ -114,7 +114,7 @@ Upcoming:
 
 > Hey guys! I'd like to share with you my latest adventure: Stakey Club, hosted at stakey.club, is a website dedicated to Decred. I posted a few articles in Brazilian Portuguese and in English. I also translated to Portuguese some posts from the Decred Blog. I hope you like it! ([slack](https://decred.slack.com/archives/C9HC2NVTM/p1528825975000416))
 
-[@morphymore](https://twitter.com/morphymore) translated Placeholder's [Decred Investment Thesis](https://medium.com/@morphymore/%E4%B8%80%E7%AF%87-decred-%E7%9A%84%E6%B7%B1%E5%BA%A6%E7%A0%94%E7%A9%B6%E8%AB%96%E6%96%87-%E7%BF%BB%E8%AD%AF-43bf1afc7127) and Richard Red's [write-up on Politeia](https://medium.com/@morphymore/decred-%E9%80%8F%E9%81%8E-politeia-%E7%9A%84%E9%A0%85%E7%9B%AE%E5%9F%BA%E9%87%91%E6%B2%BB%E7%90%86-%E7%BF%BB%E8%AD%AF-8b65d58d22e4) to Chinese, while @DZ translated Decred Roadmap 2018 to [Italian](https://medium.com/decred-ita/roadmap-di-decred-per-il-2018-f8af547c8147) and [Russian](https://medium.com/decred-russia/%D0%BF%D0%BB%D0%B0%D0%BD-%D0%B4%D0%B5%D0%B9%D1%81%D1%82%D0%B2%D0%B8%D0%B9-decred-%D0%BD%D0%B0-2018-%D0%B3%D0%BE%D0%B4-78096822b8ea), and A New Kind of DEX to [Russian](https://medium.com/decred-russia/%D0%BD%D0%BE%D0%B2%D1%8B%D0%B9-%D0%B2%D0%B8%D0%B4-%D0%B4%D0%B5%D1%86%D0%B5%D0%BD%D1%82%D1%80%D0%B0%D0%BB%D0%B8%D0%B7%D0%BE%D0%B2%D0%B0%D0%BD%D0%BD%D0%BE%D0%B3%D0%BE-%D0%BE%D0%B1%D0%BC%D0%B5%D0%BD%D0%B0-dex-27a05449de8f).
+[@morphymore](https://twitter.com/morphymore) translated Placeholder's [Decred Investment Thesis](https://medium.com/@morphymore/%E4%B8%80%E7%AF%87-decred-%E7%9A%84%E6%B7%B1%E5%BA%A6%E7%A0%94%E7%A9%B6%E8%AB%96%E6%96%87-%E7%BF%BB%E8%AD%AF-43bf1afc7127) and Richard Red's [write-up on Politeia](https://medium.com/@morphymore/decred-%E9%80%8F%E9%81%8E-politeia-%E7%9A%84%E9%A0%85%E7%9B%AE%E5%9F%BA%E9%87%91%E6%B2%BB%E7%90%86-%E7%BF%BB%E8%AD%AF-8b65d58d22e4) to Chinese, while @DZ translated Decred Roadmap 2018 to [Italian](https://medium.com/decred-ita/roadmap-di-decred-per-il-2018-f8af547c8147) and [Russian](https://medium.com/decred-russia/%D0%BF%D0%BB%D0%B0%D0%BD-%D0%B4%D0%B5%D0%B9%D1%81%D1%82%D0%B2%D0%B8%D0%B9-decred-%D0%BD%D0%B0-2018-%D0%B3%D0%BE%D0%B4-78096822b8ea), and A New Kind of DEX to [Italian](https://medium.com/decred-ita/un-nuovo-tipo-di-scambio-decentralizzato-dex-decred-e9fe760a5b87) and [Russian](https://medium.com/decred-russia/%D0%BD%D0%BE%D0%B2%D1%8B%D0%B9-%D0%B2%D0%B8%D0%B4-%D0%B4%D0%B5%D1%86%D0%B5%D0%BD%D1%82%D1%80%D0%B0%D0%BB%D0%B8%D0%B7%D0%BE%D0%B2%D0%B0%D0%BD%D0%BD%D0%BE%D0%B3%D0%BE-%D0%BE%D0%B1%D0%BC%D0%B5%D0%BD%D0%B0-dex-27a05449de8f).
 
 Second iteration of Chinese ratings [released](http://special.ccidnet.com/pub-bc-eval/). Compared to the [first issue](https://archive.today/4Xhz6), Decred dropped from 26 to 29 while Bitcoin fell from 13 to 17. We (the authors) restrain ourselves commenting on this one.
 
