Shorten F2Pool statement

--- a/journal/201806.md
+++ b/journal/201806.md
@@ -30,12 +30,7 @@ Dev activity stats for June: 245 active PRs, 184 master commits, 25,973 added an
 
 Hashrate: growth continues, the month started at 15 and ended at 44 PH/s with some wild 30% swings on the way. The peak was 53.9 PH/s.
 
-F2Pool was the leader varying between 36% and 59% hashrate, followed by coinmine.pl holding between 18% and 29%.
-
-F2Pool made a [statement](https://www.f2pool.com/help/profits/annoce) in response to concerns about its hashrate share:
-
-> For the stable development of community, F2Pool has already ceased the promotion of DCR pool, and considers to take measure like raising up the mining fee to reduce the pool hashrate if it is necessary, to prevent the capability of 51% attack. Meanwhile, with responsibility and sense of justice, F2Pool reminds "NO evil" as the principle. Thus, we do not, and will never destroy the stability of community and seek improper profits through 51% attack.  
-> Together with the community, we do sincerely hope to contribute to protect the healthy trend of Decred. ([slack](https://decred.slack.com/archives/C3P6R055Z/p1529402169000047))
+F2Pool was the leader varying between 36% and 59% hashrate, followed by coinmine.pl holding between 18% and 29%. In response to concerns about its hashrate share, F2Pool made a [statement](https://www.f2pool.com/help/profits/annoce) that they will consider measures like rising the fees to prevent growing to 51%.
 
 Staking: 30-day average ticket price is 94.7 DCR (+3.4). The price was steadily rising from 90.7 to 95.8 peaking at 98.1. Locked DCR grew from 3.68 to 3.81 million DCR, the highest value was 3.83 million corresponding to 47.87% of supply (+0.7% from previous peak).
 
