Minor About fix

--- a/journal/201806.md
+++ b/journal/201806.md
@@ -233,7 +233,7 @@ Status update from @sumiflow on correcting DCR supply on various sites:
 
 This is the third issue of Decred Journal after [April](https://xaur.github.io/decred-news/journal/201804) and [May](https://xaur.github.io/decred-news/journal/201805).
 
-The new public [Matrix logs](https://gist.github.com/jrick/458eab91a650f24be4237a7db7662dd3) look promising and we hope to transition to Matrix links instead of Slack links. In the meantime, the way to read Slack links is [explained](https://xaur.github.io/decred-news/journal/201805#about-this-issue) in the previous issue.
+The new public [Matrix logs](https://gist.github.com/jrick/458eab91a650f24be4237a7db7662dd3) look promising and we hope to transition from Slack links to Matrix links. In the meantime, the way to read Slack links is [explained](https://xaur.github.io/decred-news/journal/201805#about-this-issue) in the previous issue.
 
 Most information from third parties is relayed directly from source after a minimal sanity check. The authors of Decred Journal have no ability to verify all claims. Please beware of scams and do your own research.
 
