--- a/journal/201806.md
+++ b/journal/201806.md
@@ -237,6 +237,6 @@ Most information from third parties is relayed directly from source after a mini
 
 The new public [Matrix logs](https://gist.github.com/jrick/458eab91a650f24be4237a7db7662dd3) look promising and we hope to transition from Slack links to Matrix links. In the meantime, the way to read Slack links is [explained](https://xaur.github.io/decred-news/journal/201805#about-this-issue) in the previous issue.
 
-As usual, any feedback is appreciated: please comment on [Reddit](), [GitHub](https://github.com/xaur/decred-news/issues) or [#writers_room](https://decred.slack.com/messages/C9HC2NVTM/). Contributions are welcome too, anything from initial collection to final review to translations.
+As usual, any feedback is appreciated: please comment on [Reddit](https://www.reddit.com/r/decred/comments/8woriv/decred_journal_june_2018/), [GitHub](https://github.com/xaur/decred-news/issues) or [#writers_room](https://decred.slack.com/messages/C9HC2NVTM/). Contributions are welcome too, anything from initial collection to final review to translations.
 
 Credits (Slack names, alphabetical order): bee and Richard-Red. Special thanks to @Haon for bringing May 2018 issue to [medium](https://medium.com/decred/decred-journal-may-2018-6ea021e4f26a).
