--- a/journal/201807.md
+++ b/journal/201807.md
@@ -6,7 +6,7 @@
 
 dcrd: Several steps towards [multipeer downloads](https://github.com/decred/dcrd/issues/1145) completed: an [optimization](https://github.com/decred/dcrd/pull/1332) to use in-memory block index and a new 1337 [chain view](https://github.com/decred/dcrd/pull/1337). Maintenance: improved test coverage, upgrading dependency management system and preparing for the upcoming Go 1.11 release.
 
-dcrwallet: A big [change](https://github.com/decred/dcrwallet/pull/1213) introducing optional privacy-preserving SPV sync mode was merged. In this mode dcrwallet does not download the full blockchain but only gets the "filters", uses them to determine which blocks it needs and fetches them from random nodes on the network. This has on-disk footprint of 300–400 MB and sync time of minutes, compared to ~3.4 GB and sync time of hours for full sync (these are rough estimates).
+dcrwallet: A big [change](https://github.com/decred/dcrwallet/pull/1213) introducing optional privacy-preserving SPV sync mode was merged. In this mode dcrwallet does not download the full blockchain but only gets the "filters", uses them to determine which blocks it needs and fetches them from random nodes on the network. This has on-disk footprint of 300-400 MB and sync time of minutes, compared to ~3.4 GB and sync time of hours for full sync (these are rough estimates).
 
 > jy-p: the server side of SPV (in dcrd) was deployed in v1.2.0, the client side of SPV (in dcrwallet) is in our next release, v1.3.0. Still some minor bugs in SPV that are being worked out. There will be an update to add the latest features from BIP [157](https://github.com/bitcoin/bips/blob/master/bip-0157.mediawiki)/[158](https://github.com/bitcoin/bips/blob/master/bip-0158.mediawiki) in the next few months. SPV will be optional in v1.3.0, but it will become the default after we get a proper [header commitment](https://github.com/decred/dcrd/issues/971) for it ([#general](https://view.matrix.org/room/!MgQoetFiyjrHAywokv:decred.org/?anchor=$153279679446089MPegE:decred.org))
 
@@ -32,7 +32,7 @@ ATH 68.4 PH/s
 
 An interesting spike to 57.2% hashrate on Jul 23 from miners labeled Unknown by https://dcred.eu/powStats
 
-Staking: 30-day average ticket price is 92.6 DCR (-2.1). The price started the month at 94.6 and quickly retreated to month's low of 85 until 1860 tickets were bought within a single period (compared to target 720). This pushed the pool of tickets to 41970 (2.5% above target), which in turn caused 10 price increases in a row to the month's high of 100.4. This was the highest ticket price seen on the new ticket price algorithm that is in effect since Jul 2017. Second half of the month there was unusually low volatility between 92 and 94 DCR per ticket. Locked DCR held between 3.75 and 3.87 million or 46.6–48.0% of supply (+0.1% from previous peak).
+Staking: 30-day average ticket price is 92.6 DCR (-2.1). The price started the month at 94.6 and quickly retreated to month's low of 85 until 1860 tickets were bought within a single period (compared to target 720). This pushed the pool of tickets to 41970 (2.5% above target), which in turn caused 10 price increases in a row to the month's high of 100.4. This was the highest ticket price seen on the new ticket price algorithm that is in effect since Jul 2017. Second half of the month there was unusually low volatility between 92 and 94 DCR per ticket. Locked DCR held between 3.75 and 3.87 million or 46.6-48.0% of supply (+0.1% from previous peak).
 
 Nodes: there are 212 public listening and 216 normal nodes per [dcred.eu](https://dcred.eu/nodeStats). Version distribution: 67% on v1.2.0 (+10%), 24% on v1.1.2 (-1%), 7% on v1.1.0 (-7%). Node count data is not perfect but we can see the steady trend of upgrading to v1.2.0. This version of dcrd is notable for serving compact filters. The increased count of such full nodes allows the developers to test SPV client mode in preparations for the upcoming v1.3.0 release.
 
@@ -42,7 +42,7 @@ Obelisk posted two updates: [first](https://www.reddit.com/r/ObeliskHQ/comments/
 
 New miner from iBeLink: [DSM7T](https://ibelink.co/product/ibelink-dsm6t-blake256-miner-with-7-th-s-hash-rate/) pulls 2100 W and hashes Blake256 at 7 TH/s or Blake2b at 3.5 TH/s for $3,800, shipping Aug 5-10.
 
-There were also speculations about the mysterious [Pangolin miner](https://pangolinminer.com/product/whatsminer-dcr/) with 44 TH/s at 2200 W and $3,888 shipping November. Let us know on the #pow-mining channel if you know anything about these.
+There were also speculations about the mysterious [Pangolin miner](https://pangolinminer.com/product/whatsminer-dcr/) with 44 TH/s at 2200 W and $3,888, shipping November. Let us know on the #pow-mining channel if you know anything about these.
 
 # Integrations
 
@@ -77,7 +77,9 @@ The story was covered by [criptonoticias.com](https://www.criptonoticias.com/vot
 
 StatX [announced](https://twitter.com/statxapp/status/1021498097921388544) Decred integration into their live dashboard and public chat.
 
-(investment adoption)
+On the OTC trading front, @i2Rav from [i2trading](https://i2trading.com/) reports:
+
+> We continue to see institutional interest in DCR. Large block buyers love the concept of staking as a way to earn additional income and appreciate the stakeholder rights it affords them. Likening a DCR investment to an activist shareholder/bondholder gives these institutions some comfort while dipping their toes into a burgeoning new asset class.
 
 # Marketing
 
@@ -93,17 +95,17 @@ A pack of Stakey Telegram stickers is now [available](https://twitter.com/dcrsta
 
 Attended:
 
+* [Presentation](https://twitter.com/DeCredBAB/status/1016754321940197376) in Austin, USA. $(TODO: Confirm)
 * [Meetup](https://www.eventbrite.co.uk/e/decred-x-blueyard-berlin-meetup-currencies-core-chains-the-future-of-blockchain-governance-and-tickets-47586593783) in Berlin, Germany hosted by BlueYard Capital. @jz_bz and @lftherios discussed open source incentivization, the value of governance and their respective projects @decredproject and @oscoin. See @issedjur's feedback [here](https://view.matrix.org/room/!aNPTuiryMFmdMQWUzb:decred.org/?anchor=$153225518942700Ojtns:decred.org). (photos: [1](https://twitter.com/DanielSchuHi/status/1019649576217858048), [2](https://twitter.com/theobtl/status/1019676848127664130))
-* [O'Reilly Open Source Convention](https://conferences.oreilly.com/oscon/oscon-or) in Portland, USA. @raedah's [talk](https://conferences.oreilly.com/oscon/oscon-or/public/schedule/detail/71553) was "Decentralizing decision-making on the blockchain". The Big Stakey entertained the public. Read @raedah's report [here](https://view.matrix.org/room/!aNPTuiryMFmdMQWUzb:decred.org/?anchor=$153211410642097xnoCd:decred.org) (photos: [1](https://twitter.com/miket18087954/status/1019657304671567873), [2](https://twitter.com/miket18087954/status/1020099092792217601))
+* [O'Reilly Open Source Convention](https://conferences.oreilly.com/oscon/oscon-or) in Portland, USA. @raedah's [talk](https://conferences.oreilly.com/oscon/oscon-or/public/schedule/detail/71553) was "Decentralizing decision-making on the blockchain". The Big Stakey entertained the public. Read @raedah's report [here](https://view.matrix.org/room/!aNPTuiryMFmdMQWUzb:decred.org/?anchor=$153211410642097xnoCd:decred.org) (photos: [1](https://twitter.com/miket18087954/status/1019657304671567873), [2](https://twitter.com/miket18087954/status/1020099092792217601), [3](https://twitter.com/CoffeeSippa/status/1019700563955539968))
+
   > oregonisaac: many open source devs at OSCON were VERY interested in Politeia and it was probably the #1 hook that resulted in lots of long conversations about what makes Decred unique from the ground up. ([#politeia](https://view.matrix.org/room/!VFRvyndKpzcLrVslQD:decred.org/?anchor=$153212685842246TYtJv:decred.org))
 * [Blockchain Meetup](https://www.meetup.com/Blockchain-Meetup-Faro-Algarve/events/252403886/) in Faro, Portugal. Marco Peereboom gave a talk "Decred 101" and answered questions.
-
-$(Confirm)
-* 0712 Austin https://twitter.com/DeCredBAB/status/1016754321940197376
 
 Upcoming:
 
 * [Meetup](https://www.meetup.com/Social-at-The-Block-Cafe/events/253103196/) in Lisbon, Portugal on Aug 2. @moo31337 and @mm will be presenting on Decred with talk "Decred 101 - Governance with skin in the game". Co-hosted by The Block Cafe, free entrance.
+* [Meetup](https://alysida.kktix.cc/events/b-c-meetup) in Taipei, Taiwan on Aug 5. @morphymore will give a short intro on Decred.
 * [Blockchain & Decentralised Governance Panel](https://www.facebook.com/events/285036208715647/) in Melbourne, Australia on Aug 13. Hosted by YBF Ventures.
 * [Voice of Blockchain](https://chicagoblockchainproject.com/voice-of-blockchain/) in Chicago, USA on Aug 24-25. $(get more info)
 
@@ -140,6 +142,7 @@ Articles:
 * Decred Demystified: A Beginner’s Guide ([bcfocus.com](https://bcfocus.com/cryptocurrency-analysis/decred-dcr-demystified-a-beginners-guide/19813/))
 * Trade Recommendation: Decred ([hacked.com](https://hacked.com/trade-recommendation-decred-2/))
 * What is Decred? Learn about Decred (Vietnamese, [huongdandaotienao.com](https://huongdandaotienao.com/decred-dcr-coin-la-gi-cung-tim-hieu-ve-decred-dcr-coin/))
+* Decred - The Democratic Currency (Portuguese, [profitfy.trade](https://blog.profitfy.trade/2018/07/31/decred-a-moeda-democratica/))
 
 Note that some articles are omitted due to low quality or factual errors.
 
