--- a/journal/201807.md
+++ b/journal/201807.md
@@ -26,11 +26,7 @@ Dev activity stats for $(month): $(x) active PRs, $(x) master commits, $(x) adde
 
 # Network
 
-Hashrate: $(text)
-
-ATH 68.4 PH/s
-
-An interesting spike to 57.2% hashrate on Jul 23 from miners labeled Unknown by https://dcred.eu/powStats
+Hashrate: the month started at 40.5 and ended at 51.6 PH/s, with a low of 33.3 and a new all time high of 68.4 PH/s. F2Pool is leading with 40-45%, followed by the new BeePool at 15-25% and coinmine.pl at 18-23%.
 
 Staking: 30-day average ticket price is 92.6 DCR (-2.1). The price started the month at 94.6 and quickly retreated to month's low of 85 until 1860 tickets were bought within a single period (compared to target 720). This pushed the pool of tickets to 41970 (2.5% above target), which in turn caused 10 price increases in a row to the month's high of 100.4. This was the highest ticket price seen on the new ticket price algorithm that is in effect since Jul 2017. Second half of the month there was unusually low volatility between 92 and 94 DCR per ticket. Locked DCR held between 3.75 and 3.87 million or 46.6-48.0% of supply (+0.1% from previous peak).
 
@@ -53,7 +49,7 @@ An interesting detail about [decredbrasil.com](https://decredbrasil.com/stats) s
 > emiliomann: stakebrasil is one of the pools with the lowest number of missed and expired tickets. It was one of the first and has a smaller percentage than the most recent ones who haven’t had the time to do so. (...) The Brazilian pool should be the one with the more servers spread around the world: 6 to decrease the latency. This is to explain to you why the rate of 5% (currently around 0.06 DCR) on the reward is also one of the highest.  
 > girino: 8 voting wallets now. I just finished setting up a new one yesterday. All of them in different datacenters, 3 in europe, 3 in north america, 1 in brazil and one in asia. We also have 3 more servers, 1 for the front end, one for "stats" and one for dcrdata. ([#general](https://view.matrix.org/room/!MgQoetFiyjrHAywokv:decred.org/?anchor=$153166757139590QIHHB:decred.org))
 
-Luxor [started](https://www.reddit.com/r/decred/comments/8xptci/luxor_tech_chinese_pools/) a new set of pool servers inside mainland China.
+On the mining side, Luxor [started](https://www.reddit.com/r/decred/comments/8xptci/luxor_tech_chinese_pools/) a new set of pool servers inside mainland China, while [zpool](https://www.zpool.ca/) has [enabled](https://twitter.com/_zpool_/status/1020751950327922689) Decred mining.
 
 Exchange integrations:
 
