--- a/journal/201807.md
+++ b/journal/201807.md
@@ -1,6 +1,6 @@
-# $(DRAFT) Decred Journal – July 2018 $(DRAFT)
+# {DRAFT} Decred Journal – July 2018 {DRAFT}
 
-![$(alt text)](../img/$(file).jpg "$(hover text)")
+![{alt text}](../img/{file.jpg} "{hover text}")
 
 # Development
 
@@ -22,7 +22,7 @@ dcrdata: development of several chart visualizations was completed and is awaiti
 
 atomicswap: @glendc is seeking reviews of his Ethereum support [pull request](https://github.com/decred/atomicswap/pull/76).
 
-Dev activity stats for $(month): $(x) active PRs, $(x) master commits, $(x) added and $(x) deleted lines spread across $(x) repositories. Contributions came from $(x)-$(x) developers per repository. ([chart]($(link)))
+Dev activity stats for {month}: {x} active PRs, {x} master commits, {x} added and {x} deleted lines spread across {x} repositories. Contributions came from {x}-{x} developers per repository. ([chart]({link}))
 
 # Network
 
@@ -53,17 +53,17 @@ On the mining side, Luxor [started](https://www.reddit.com/r/decred/comments/8xp
 
 Exchange integrations:
 
-* $()
+* {}
 
-(new OTC)
+{new OTC}
 
-(payment processors, wallets)
+{payment processors, wallets}
 
 # Adoption
 
 New merchants:
 
-* $()
+* {}
 
 VotoLegal update:
 
@@ -79,7 +79,7 @@ On the OTC trading front, @i2Rav from [i2trading](https://i2trading.com/) report
 
 # Marketing
 
-Targeted advertising reports for [June](https://www.reddit.com/r/decred/comments/8xgrv4/monthly_targeted_ads_report/) and [July]($()) released. Reach @timhebel for full versions.
+Targeted advertising reports for [June](https://www.reddit.com/r/decred/comments/8xgrv4/monthly_targeted_ads_report/) and [July]({}) released. Reach @timhebel for full versions.
 
 June:
 
@@ -91,7 +91,7 @@ A pack of Stakey Telegram stickers is now [available](https://twitter.com/dcrsta
 
 Attended:
 
-* [Presentation](https://twitter.com/DeCredBAB/status/1016754321940197376) in Austin, USA. $(TODO: Confirm)
+* [Presentation](https://twitter.com/DeCredBAB/status/1016754321940197376) in Austin, USA. {TODO: Confirm}
 * [Meetup](https://www.eventbrite.co.uk/e/decred-x-blueyard-berlin-meetup-currencies-core-chains-the-future-of-blockchain-governance-and-tickets-47586593783) in Berlin, Germany hosted by BlueYard Capital. @jz_bz and @lftherios discussed open source incentivization, the value of governance and their respective projects @decredproject and @oscoin. See @issedjur's feedback [here](https://view.matrix.org/room/!aNPTuiryMFmdMQWUzb:decred.org/?anchor=$153225518942700Ojtns:decred.org). (photos: [1](https://twitter.com/DanielSchuHi/status/1019649576217858048), [2](https://twitter.com/theobtl/status/1019676848127664130))
 * [O'Reilly Open Source Convention](https://conferences.oreilly.com/oscon/oscon-or) in Portland, USA. @raedah's [talk](https://conferences.oreilly.com/oscon/oscon-or/public/schedule/detail/71553) was "Decentralizing decision-making on the blockchain". The Big Stakey entertained the public. Read @raedah's report [here](https://view.matrix.org/room/!aNPTuiryMFmdMQWUzb:decred.org/?anchor=$153211410642097xnoCd:decred.org) (photos: [1](https://twitter.com/miket18087954/status/1019657304671567873), [2](https://twitter.com/miket18087954/status/1020099092792217601), [3](https://twitter.com/CoffeeSippa/status/1019700563955539968))
 
@@ -103,11 +103,11 @@ Upcoming:
 * [Meetup](https://www.meetup.com/Social-at-The-Block-Cafe/events/253103196/) in Lisbon, Portugal on Aug 2. @moo31337 and @mm will be presenting on Decred with talk "Decred 101 - Governance with skin in the game". Co-hosted by The Block Cafe, free entrance.
 * [Meetup](https://alysida.kktix.cc/events/b-c-meetup) in Taipei, Taiwan on Aug 5. @morphymore will give a short intro on Decred.
 * [Blockchain & Decentralised Governance Panel](https://www.facebook.com/events/285036208715647/) in Melbourne, Australia on Aug 13. Hosted by YBF Ventures.
-* [Voice of Blockchain](https://chicagoblockchainproject.com/voice-of-blockchain/) in Chicago, USA on Aug 24-25. $(get more info)
+* [Voice of Blockchain](https://chicagoblockchainproject.com/voice-of-blockchain/) in Chicago, USA on Aug 24-25. {get more info}
 
 # Media
 
-$(ratings news)
+{ratings news}
 
 Translations:
 
@@ -148,7 +148,7 @@ Videos:
 
 # Community Discussions
 
-Community stats: Twitter followers $() (+$()), Reddit subscribers $() (+$()), Slack users $() (+$()), GitHub $() stars and $() forks of dcrd repository.
+Community stats: Twitter followers {} (+{}), Reddit subscribers {} (+{}), Slack users {} (+{}), GitHub {} stars and {} forks of dcrd repository.
 
 Comm systems update:
 
@@ -162,13 +162,9 @@ Articles:
 * On-Chain Vote Buying and the Rise of Dark DAOs ([hackingdistributed.com](http://hackingdistributed.com/2018/07/02/on-chain-vote-buying/)). Discussion: [#general](https://decred.slack.com/archives/C0NRMDVMJ/p1530595796000041), [#governance](https://decred.slack.com/archives/CAAMEU56W/p1530611461000047), [#random](https://decred.slack.com/archives/C3PAYQJTW/p1530588819000180), [Reddit](https://www.reddit.com/r/decred/comments/8vrpy3/on_chain_vote_buying_and_the_rise_of_dark_daos/) and a timely [response article](https://medium.com/@richardred/response-to-on-chain-vote-buying-and-the-rise-of-dark-daos-b479deb37fb7) by Richard Red.
 * It's Too Soon for On-Chain Governance ([coindesk.com](https://www.coindesk.com/soon-chain-governance/): [Reddit](https://www.reddit.com/r/decred/comments/8wdrsa/its_too_soon_for_onchain_governance_by_michael_j/).
 
-Reddit recap: [using](https://www.reddit.com/r/Dcrtrader/comments/8rf7qp/dcr_trader_has_a_reddit_chat_now/) Reddit chat for r/dcrtrader, chat systems, Matrix; roadmap [concerns](https://www.reddit.com/r/decred/comments/8ws4ew/daes_and_roadmap_query/); $(XCP GROUP insette https://www.reddit.com/r/decred/comments/90sdif/group_and_the_potential_of_pow_minervalidated/).
+Forums: [using](https://www.reddit.com/r/Dcrtrader/comments/8rf7qp/dcr_trader_has_a_reddit_chat_now/) Reddit chat for r/dcrtrader, chat systems, Matrix; roadmap [concerns](https://www.reddit.com/r/decred/comments/8ws4ew/daes_and_roadmap_query/); {XCP GROUP insette https://www.reddit.com/r/decred/comments/90sdif/group_and_the_potential_of_pow_minervalidated/}.
 
-(Reddit sub news)
-
-Forums: $()
-
-Chats: [why](https://view.matrix.org/room/!wSdymYrEpBhsWlDJuk:decred.org/?anchor=$153090455433548QNlFj:decred.org) tickets don't have 100% chance to vote; [ideas](https://view.matrix.org/room/!OfChXgczrIlpEZSFAv:decred.org/?anchor=$153125687135698lmQRO:decred.org) for more straightforward marketing; long-running [chat](https://view.matrix.org/room/!NKtIRqGOEGaZvSQkKl:decred.org/?anchor=$153144666238238HtaLA:decred.org) about world economy and failure modes; @brandon's [thoughts]($()) on tokenizing everything, ICOs, securities, sidechains and more; [challenges](https://view.matrix.org/room/!MgQoetFiyjrHAywokv:decred.org/?anchor=$153192145141235HURRx:decred.org) to staking with Trezor; [ideas](https://view.matrix.org/room/!MgQoetFiyjrHAywokv:decred.org/?anchor=$153219648842589QqFwE:decred.org) how to use CryptoSteel wallet; [why](https://view.matrix.org/room/!wSdymYrEpBhsWlDJuk:decred.org/?anchor=$153221763542646xEpak:decred.org) exchange can't stake your coins, how staking can increase security, why seed export from wallet is a bad idea and why dcrwallet doesn't ever store the seed; ticket voting [math](https://view.matrix.org/room/!wSdymYrEpBhsWlDJuk:decred.org/?anchor=$153240577043548fppqA:decred.org); [discussion](https://view.matrix.org/room/!HEeJkbPRpAqgAwhXWO:decred.org/?anchor=$153304069846768SCrcO:decred.org) about how GitHub workflow forces to depend on modern web browser and possible alternatives.
+Chats: [why](https://view.matrix.org/room/!wSdymYrEpBhsWlDJuk:decred.org/?anchor=$153090455433548QNlFj:decred.org) tickets don't have 100% chance to vote; [ideas](https://view.matrix.org/room/!OfChXgczrIlpEZSFAv:decred.org/?anchor=$153125687135698lmQRO:decred.org) for more straightforward marketing; long-running [chat](https://view.matrix.org/room/!NKtIRqGOEGaZvSQkKl:decred.org/?anchor=$153144666238238HtaLA:decred.org) about world economy and failure modes; @brandon's [thoughts]({}) on tokenizing everything, ICOs, securities, sidechains and more; [challenges](https://view.matrix.org/room/!MgQoetFiyjrHAywokv:decred.org/?anchor=$153192145141235HURRx:decred.org) to staking with Trezor; [ideas](https://view.matrix.org/room/!MgQoetFiyjrHAywokv:decred.org/?anchor=$153219648842589QqFwE:decred.org) how to use CryptoSteel wallet; [why](https://view.matrix.org/room/!wSdymYrEpBhsWlDJuk:decred.org/?anchor=$153221763542646xEpak:decred.org) exchange can't stake your coins, how staking can increase security, why seed export from wallet is a bad idea and why dcrwallet doesn't ever store the seed; ticket voting [math](https://view.matrix.org/room/!wSdymYrEpBhsWlDJuk:decred.org/?anchor=$153240577043548fppqA:decred.org); [discussion](https://view.matrix.org/room/!HEeJkbPRpAqgAwhXWO:decred.org/?anchor=$153304069846768SCrcO:decred.org) about how GitHub workflow forces to depend on modern web browser and possible alternatives.
 
 # Markets
 
@@ -182,13 +178,13 @@ Decred was noticed in top 10 mineable coins https://coinmarketcap.com/coins/view
 
 # Relevant External
 
-(PoW and ASIC resistance news)
+{PoW and ASIC resistance news}
 
-(exchanges news)
+{exchanges news}
 
 One million PCs in China were [infected](https://btcmanager.com/one-million-pcs-cryptojacked-in-china-as-hackers-make-2-million-worth-of-digibyte-siacoin-and-decred/) via browser plugins to mine Decred, Siacoin and Digibyte.
 
-@nic\_\_carter [published](https://twitter.com/nic__carter/status/1014174406711574528) slides from his [talk]($()) "An Overview of Governance in Blockchains" from Zcon0. $(include governance definition from slide 9?)
+@nic\_\_carter [published](https://twitter.com/nic__carter/status/1014174406711574528) slides from his [talk]({}) "An Overview of Governance in Blockchains" from Zcon0. {include governance definition from slide 9?}
 
 This [article](https://www.usv.com/blog/whats-next) arguing the importance of governance systems dates back to 2007.
 
@@ -200,22 +196,22 @@ David Vorick on Unchained, Obelisk http://unchained.forbes.libsynpro.com/why-asi
 
 DCR supply and market cap is now correct on onchainfx.com and finally, coinmarketcap.com. Thanks to @sumiflow, @jz and others doing the tedious work to reach out the various websites.
 
-$(TODO: DCR-related first)
+{TODO: DCR-related first}
 
 On Jul 27 Circle [announced](https://blog.circle.com/2018/07/26/asset-delistings/) delisting of 9 coins from Poloniex that led to a loss from 23 to 81% of their value same day. Sad reminder about how much a project can depend on a single centralized exchange can have.
 
 # About This Issue
 
-This is the $(th) issue of Decred Journal. It is mirrored on [GitHub]($()), [Medium]($()) and [Reddit]($()). Past issues are available [here](https://xaur.github.io/decred-news/).
+This is the {}th issue of Decred Journal. It is mirrored on [GitHub]({}), [Medium]({}) and [Reddit]({}). Past issues are available [here](https://xaur.github.io/decred-news/).
 
 Most information from third parties is relayed directly from source after a minimal sanity check. The authors of Decred Journal have no ability to verify all claims. Please beware of scams and do your own research.
 
-We continue transitioning to use chat links to Matrix web view. One UX inconvenience in the web viewer is that it always shows linked message at the bottom (highlighted in yellow) and you have to click "Show newer messages" to read on. This is filed as bug [here]($()).
+We continue transitioning to use chat links to Matrix web view. One UX inconvenience in the web viewer is that it always shows linked message at the bottom (highlighted in yellow) and you have to click "Show newer messages" to read on. This is filed as bug [here]({}).
 
-In the previous issue we introduced "Featured articles". The judgement is subjective by definition, if you feel unfairness or want to debate the criteria please check [this issue]($()).
+In the previous issue we introduced "Featured articles". The judgement is subjective by definition, if you feel unfairness or want to debate the criteria please check [this issue]({}).
 
-Feedback is appreciated: please comment on [Reddit]($()), [GitHub](https://github.com/xaur/decred-news/issues) or [#writers_room](https://decred.slack.com/messages/C9HC2NVTM/).
+Feedback is appreciated: please comment on [Reddit]({}), [GitHub](https://github.com/xaur/decred-news/issues) or [#writers_room](https://decred.slack.com/messages/C9HC2NVTM/).
 
 Contributions are also welcome, some areas are adding content, pre-release review or translations to other languages.
 
-Credits (Slack names, alphabetical order): $(), $().
+Credits (Slack names, alphabetical order): {}, {}.
